--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		.outer_rec_box{			
 			height: 800px;
 			width: auto;
-			background-image: url(money.jpg);
+			background-image: url(resources/money.jpg);
 		}
 		h1{
   			text-shadow: 0 0 3px #FFF000, 0 0 5px #0000FF;
